--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
        </div>
    </div>
    <div class="footer">
-       <p>&copy; 2023 by iRIS. All rights reserved.</p>
+       <p>&copy; 2023 by iRIS Group inc. All rights reserved.</p>
    </div>
  </div>
 </body>
