--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
            // JavaScript code for the product cards generation
            // Create an array of product objects
            var products = [
-             {name:"iRIS Laptop", image:"laptop.jpg", price:"$999", description:"A sleek and powerful laptop with a 15-inch display and 8GB RAM"},
-             {name:"iRIS Tablet", image:"tablet.jpg", price:"$699", description:"A versatile and portable tablet with a 10-inch display and 4GB RAM"},
-             {name:"iRIS Phone", image:"phone.jpg", price:"$499", description:"A smart and reliable phone with a 6-inch display and 3GB RAM"},
-             {name:"iRIS Smartwatch", image:"watch.jpg", price:"$299", description:"A stylish and functional smartwatch with a 1.5-inch display and 1GB RAM"}
+             {name:"iRIS Laptop", image:"resources/R.png", price:"$999", description:"A sleek and powerful laptop with a 15-inch display and 8GB RAM"},
+             {name:"iRIS Tablet", image:"resources/OIP.jpg", price:"$699", description:"A versatile and portable tablet with a 10-inch display and 4GB RAM"},
+             {name:"iRIS Phone", image:"resources/R.jpg", price:"$499", description:"A smart and reliable phone with a 6-inch display and 3GB RAM"},
+             {name:"iRIS Smartwatch", image:"resources/R (1).jpg", price:"$299", description:"A stylish and functional smartwatch with a 1.5-inch display and 1GB RAM"}
            ];
 
            // Loop through the array and create a card element for each product
