--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
  <div class="container">
    <div class="nav">
-     <img src="logo.png" alt="iRIS logo" class="logo">
+     <img src="resources\logo.png" alt="iRIS logo" class="logo">
        <ul>
          <li><a href="#">Home</a></li>
          <li><a href="#">Products</a></li>
