--- a/products.html
+++ b/products.html
@@ -18,11 +18,11 @@
        </ul>
    </div>
    <div class="banner">
-       <h1>Welcome to iRIS</h1>
+       <h1>iRIS Store</h1>
        <p>The online store for innovative and reliable tech products</p>
    </div>
    <div class="products">
-       <h2>Our Featured Products</h2>
+       <h2>All Products</h2>
        <div class="container">
          <!-- Use a loop to generate the product cards from an array of objects -->
          <!-- Each object has properties like name, image, price, and description -->
@@ -34,7 +34,8 @@
              {name:"iRIS Laptop", image:"resources/R.png", price:"$999", description:"A sleek and powerful laptop with a 15-inch display and 8GB RAM"},
              {name:"iRIS Tablet", image:"resources/OIP-removebg-preview.png", price:"$699", description:"A versatile and portable tablet with a 10-inch display and 4GB RAM"},
              {name:"iRIS Phone", image:"resources/R-removebg-preview.png", price:"$499", description:"A smart and reliable phone with a 6-inch display and 3GB RAM"},
-             {name:"iRIS Smartwatch", image:"resources/R__1_-removebg-preview.png", price:"$299", description:"A stylish and functional smartwatch with a 1.5-inch display and 1GB RAM"}
+             {name:"iRIS Smartwatch", image:"resources/R__1_-removebg-preview.png", price:"$299", description:"A stylish and functional smartwatch with a 1.5-inch display and 1GB RAM"},
+             {name:"iRIS Earbuds", image: "resources/earbuds.png", price: "$199", description: "Wireless earbuds with a powerful noise cancellation feature"}
            ];
 
            // Loop through the array and create a card element for each product
