--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>iRIS Store</title>
+  <title>iRIS Blog</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,11 +18,11 @@
        </ul>
    </div>
    <div class="banner">
-       <h1>Welcome to iRIS</h1>
-       <p>The online store for innovative and reliable tech products</p>
+       <h1>iRIS Blog</h1>
+       <p>The place for all news about iRIS</p>
    </div>
    <div class="products">
-       <h2>Our Featured Products</h2>
+       <h2>Posts</h2>
        <div class="container">
          <!-- Use a loop to generate the product cards from an array of objects -->
          <!-- Each object has properties like name, image, price, and description -->
@@ -31,10 +31,11 @@
            // JavaScript code for the product cards generation
            // Create an array of product objects
            var products = [
-             {name:"iRIS Laptop", image:"resources/R.png", price:"$999", description:"A sleek and powerful laptop with a 15-inch display and 8GB RAM"},
-             {name:"iRIS Tablet", image:"resources/OIP-removebg-preview.png", price:"$699", description:"A versatile and portable tablet with a 10-inch display and 4GB RAM"},
-             {name:"iRIS Phone", image:"resources/R-removebg-preview.png", price:"$499", description:"A smart and reliable phone with a 6-inch display and 3GB RAM"},
-             {name:"iRIS Smartwatch", image:"resources/R__1_-removebg-preview.png", price:"$299", description:"A stylish and functional smartwatch with a 1.5-inch display and 1GB RAM"}
+             {name:"Launch of iRIS Laptop", image:"resources/R.png", description:"A sleek and powerful laptop with a 15-inch display and 8GB RAM"},
+             {name:"Launch of iRIS Tablet", image:"resources/OIP-removebg-preview.png", description:"A versatile and portable tablet with a 10-inch display and 4GB RAM"},
+             {name:"Launch of iRIS Phone", image:"resources/R-removebg-preview.png", description:"A smart and reliable phone with a 6-inch display and 3GB RAM"},
+             {name:"Launch of iRIS Smartwatch", image:"resources/R__1_-removebg-preview.png", description:"A stylish and functional smartwatch with a 1.5-inch display and 1GB RAM"},
+             {name:"Launch of iRIS Earbuds", image: "resources/earbuds.png", description: "Wireless earbuds with a powerful noise cancellation feature"}
            ];
 
            // Loop through the array and create a card element for each product
@@ -51,23 +52,18 @@
              var h3 = document.createElement("h3");
              h3.innerText = products[i].name;
 
-             // Create a p element with the innerText set to the product price
-             var p1 = document.createElement("p");
-             p1.innerText = products[i].price;
-
              // Create another p element with the innerText set to the product description
              var p2 = document.createElement("p");
              p2.innerText = products[i].description;
 
              // Create a button element with the innerText set to "Buy Now"
              var button = document.createElement("button");
-             button.innerText = "Buy Now";
+             button.innerText = "Read more";
 
              // Append the img, h3, p1, p2, and button elements to the card element
              card.appendChild(img);
              card.appendChild(h3);
              card.appendChild(p1);
-             card.appendChild(p2);
              card.appendChild(button);
 
              // Append the card element to the container element
