changed mesage in home

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>iRIS Store</title>
+  <title>iRIS</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
    </div>
    <div class="banner">
        <h1>Welcome to iRIS</h1>
-       <p>The online store for innovative and reliable tech products</p>
+       <p>The home innovative and reliable tech products</p>
    </div>
    <div class="products">
        <h2>Our Featured Products</h2>
