--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    </div>
    <div class="banner">
        <h1>Welcome to iRIS</h1>
-       <p>The home innovative and reliable tech products</p>
+       <p>The home of innovative and reliable tech products</p>
    </div>
    <div class="products">
        <h2>Our Featured Products</h2>
