--- a/products.html
+++ b/products.html
@@ -1,85 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>iRIS Store</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
- <div class="container">
-   <div class="nav">
-     <img src="resources\logo banner.png" alt="iRIS logo" class="logo">
-       <ul>
-         <li><a href="index.html">Home</a></li>
-         <li><a href="products.html">Products</a></li>
-         <li><a href="blog.html">Blog</a></li>
-         <li><a href="#">Contact</a></li>
-       </ul>
-   </div>
-   <div class="banner">
-       <h1>iRIS Store</h1>
-       <p>The online store for innovative and reliable tech products</p>
-   </div>
-   <div class="products">
-       <h2>All Products</h2>
-       <div class="container">
-         <!-- Use a loop to generate the product cards from an array of objects -->
-         <!-- Each object has properties like name, image, price, and description -->
-         <!-- For example, products[0] = {name:"iRIS Laptop", image:"laptop.jpg", price:"$999", description:"A sleek and powerful laptop with a 15-inch display and 8GB RAM"} -->
-         <script>
-           // JavaScript code for the product cards generation
-           // Create an array of product objects
-           var products = [
-             {name:"iRIS Laptop", image:"resources/R.png", price:"$999", description:"A sleek and powerful laptop with a 15-inch display and 8GB RAM"},
-             {name:"iRIS Tablet", image:"resources/OIP-removebg-preview.png", price:"$699", description:"A versatile and portable tablet with a 10-inch display and 4GB RAM"},
-             {name:"iRIS Phone", image:"resources/R-removebg-preview.png", price:"$499", description:"A smart and reliable phone with a 6-inch display and 3GB RAM"},
-             {name:"iRIS Smartwatch", image:"resources/R__1_-removebg-preview.png", price:"$299", description:"A stylish and functional smartwatch with a 1.5-inch display and 1GB RAM"},
-             {name:"iRIS Earbuds", image: "resources/earbuds.png", price: "$199", description: "Wireless earbuds with a powerful noise cancellation feature"}
-           ];
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>iRIS Store</title>
+    <link rel="stylesheet" href="style.css">
+    <script>
+      // JavaScript code for the product cards generation
+      // Create an empty array of product objects
+      var products = [];
 
-           // Loop through the array and create a card element for each product
-           for (var i = 0; i < products.length; i++) {
-             // Create a div element with the class "card"
-             var card = document.createElement("div");
-             card.className = "card";
+      // Get data from the sheet and store it in the products array
+      function getDataFromSheet() {
+        fetch('https://docs.google.com/spreadsheets/d/109zQw4KjhYl4UneLxvPRLINLHriIw8MwtdGx8Bvk4LY/gviz/tq?tqx=out:json&sheet=products')
+          .then(response => response.text())
+          .then(text => {
+            var json = JSON.parse(text.substr(47).slice(0, -2));
+            var rows = json.table.rows;
+            for (var i = 0; i < rows.length; i++) {
+              var row = rows[i].c;
+              // Create a product object from the row data
+              var product = {
+                name: row[0].v,
+                image: row[1].v,
+                price: row[2].v,
+                description: row[3].v
+              };
+              // Push the product object to the products array
+              products.push(product);
+            }
+            createProductCards();
+          });
+      }
 
-             // Create an img element with the src attribute set to the product image
-             var img = document.createElement("img");
-             img.src = products[i].image;
+      // Loop through the array and create a card element for each product
+      function createProductCards() {
+        for (var i = 0; i < products.length; i++) {
+          // Create a div element with the class "card"
+          var card = document.createElement("div");
+          card.className = "card";
+          // Create an img element with the src attribute set to the product image
+          var img = document.createElement("img");
+          img.src = products[i].image;
+          // Create an h3 element with the innerText set to the product name
+          var h3 = document.createElement("h3");
+          h3.innerText = products[i].name;
+          // Create a p element with the innerText set to the product price
+          var p1 = document.createElement("p");
+          p1.innerText = products[i].price;
+          // Create another p element with the innerText set to the product description
+          var p2 = document.createElement("p");
+          p2.innerText = products[i].description;
+          // Create a button element with the innerText set to "Buy Now"
+          var button = document.createElement("button");
+          button.innerText = "Buy Now";
+          // Append the img, h3, p1, p2, and button elements to the card element
+          card.appendChild(img);
+          card.appendChild(h3);
+          card.appendChild(p1);
+          card.appendChild(p2);
+          card.appendChild(button);
+          // Append the card element to the container element
+          document.querySelector(".container").appendChild(card);
+        }
+      }
 
-             // Create an h3 element with the innerText set to the product name
-             var h3 = document.createElement("h3");
-             h3.innerText = products[i].name;
-
-             // Create a p element with the innerText set to the product price
-             var p1 = document.createElement("p");
-             p1.innerText = products[i].price;
-
-             // Create another p element with the innerText set to the product description
-             var p2 = document.createElement("p");
-             p2.innerText = products[i].description;
-
-             // Create a button element with the innerText set to "Buy Now"
-             var button = document.createElement("button");
-             button.innerText = "Buy Now";
-
-             // Append the img, h3, p1, p2, and button elements to the card element
-             card.appendChild(img);
-             card.appendChild(h3);
-             card.appendChild(p1);
-             card.appendChild(p2);
-             card.appendChild(button);
-
-             // Append the card element to the container element
-             document.querySelector(".container").appendChild(card);
-           }
-         </script>
-       </div>
-   </div>
-   <div class="footer">
-       <p>&copy; 2023 by iRIS Group inc. All rights reserved.</p>
-   </div>
- </div>
-</body>
+      // Call the getDataFromSheet function when the window loads
+      window.onload = getDataFromSheet;
+    </script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="nav">
+        <img src="resources\logo banner.png" alt="iRIS logo" class="logo">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div class="banner">
+        <h1>iRIS Store</h1>
+        <p>The online store for innovative and reliable tech products</p>
+      </div>
+      <div class="products">
+        <h2>All Products</h2>
+        <div class="container"></div>
+    </div>
+  </div>
+  <div class="footer"> 
+    <p>© 2023 by iRIS Group inc. All rights reserved.</p>
+  </div>
+  </body>
 </html>
