--- a/products.html
+++ b/products.html
@@ -72,7 +72,7 @@
   <body>
     <div class="container">
       <div class="nav">
-        <img src="resources\logo banner.png" alt="iRIS logo" class="logo">
+        <img src="resources\logo.png" alt="iRIS logo" class="logo">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
