--- a/committment.html
+++ b/committment.html
@@ -25,7 +25,28 @@
             text-align: center;
             }
         </style>
-    </head>
+        <meta charset="utf-8"> 
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="resources/style.css"> 
+    </head> 
+    <body> 
+    	<div class="container"> 
+            <div class="nav"> 
+            	<img src="resources\logo.png" alt="iRIS logo" class="logo"> 
+                <ul> 
+                    <li><a href="index.html">Home</a></li> 
+                    <li><a href="products.html">Products</a></li> 
+                    <li><a href="blog.html">Blog</a></li> 
+                    <li><a href="contact.html">Contact</a></li> 
+                </ul> 
+            </div> 
+            <div class="banner"> 
+                <h1>Our commitment</h1> 
+                <p>It's no secret that the earth has been heating up. </br > iRIS donates 2% of all profit to climate charities and we are committing to going carbon neutral by 2025.</p> 
+            </div>
+            <div class="footer">
+                <p>© 2023 by iRIS Group inc. All rights reserved.</p> 
+            </div>
     <body>
         <div class="clock">
             <span id="time"></span>
