--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       </div>
       <div class="products">
         <h2>Our Featured News</h2>
-        <div class="blogContainer"></div>
+        <div class="blogContainer">
+          <a href="committment.html">Learn more about our commitment.</a>
+        </div>
       </div>
       <div class="products">
         <h2>Our Featured Products</h2>
