--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="products">
         <h2>Our Featured News</h2>
         <div class="blogContainer">
-          <a href="committment.html">Learn more about our commitment.</a>
+          <a href="committment.html">Learn more about our commitment.</a> </br >
         </div>
       </div>
       <div class="products">
