--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
         <p>The home of innovative and reliable tech products</p>
       </div>
       <div class="products">
+        <a href="committment.html">Learn about our commitment.</a>
         <h2>Our Featured News</h2>
-        <div class="blogContainer">
-          <a href="committment.html">Learn more about our commitment.</a> </br >
-        </div>
+        <div class="blogContainer"></div>
       </div>
       <div class="products">
         <h2>Our Featured Products</h2>
