--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>The home of innovative and reliable tech products</p>
       </div>
       <div class="products">
-        <a href="committment.html">Learn about our commitment.</a>
+        <a class="container" href="committment.html">Learn about our commitment.</a>
         <h2>Our Featured News</h2>
         <div class="blogContainer"></div>
       </div>
