--- a/committment.html
+++ b/committment.html
@@ -42,7 +42,7 @@
             </div> 
             <div class="banner"> 
                 <h1>Our commitment</h1> 
-                <p>It's no secret that the earth has been heating up. </br > iRIS donates 2% of all profit to climate charities and we are committing to going carbon neutral by 2025.</p> 
+                <p>It's no secret that the earth has been heating up. </br > iRIS donates 2% of all profit to climate charities and </br> we are committing to going carbon neutral by 2025.</p> 
             </div>
             <!--
         	<div class="clock"> 
