--- a/committment.html
+++ b/committment.html
@@ -59,8 +59,10 @@
                 }, 1000); 
             </script> -->
 		</br></br></br></br>
+		<div>
             <script src="https://climateclock.world/widget-v2.js" async></script>
         	<climate-clock />
+		</div>
 		</br></br></br></br>
             <div class="footer">
                 <p>© 2023 by iRIS Group inc. All rights reserved.</p> 
