--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       </div>
       <div class="products">
       </br>
+      <div class="notice">
         <a class="container" href="committment.html">Learn about our commitment.</a>
+      </div>
         <h2>Our Featured News</h2>
         <div class="blogContainer"></div>
       </div>
