--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       <div class="products">
       </br>
       <div class="notice">
-        <a class="container" href="committment.html">Learn about our commitment.</a>
+        <div>
+          <a class="container" href="committment.html">Learn about our commitment.</a>
+        </div>
       </div>
         <h2>Our Featured News</h2>
         <div class="blogContainer"></div>
