--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   gtag('config', 'G-VZDH196RMV');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3957772349487941"
+     crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>iRIS</title>
